rng-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rnd-svc
  labels:
    app: rnd
    tier: backend
spec:
  type: NodePort 
  # type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: rnd
    tier: backend
